12 Sep 2010 Support REXX as scripting language for .cnf .rc and script files - Jan Jaeger
13 Sep 2010 Issue herc commands via HTTP /cgi-bin/tasks/cmd?cmd=xxx - Robert Hodge
05 Sep 2010 Fast-BCR-Serialization Facility - Roger Bowler
31 Aug 2010 Comment out unimplemented hetmap support for "tapemap" alias
            that produces incorrect output under Linux due to libtool
            wrappers - Kevin Leonard
29 Aug 2010 Virtual Architecture Level support - Jan Jaeger
28 Aug 2010 Add "autoinit" command to control a sysblk variable noautoinit. 
            sysblk.noautoinit = FALSE, devinit will create a file when requested
            file is not found, write 2 TMs and rewind the file. 
            sysblk.noautoinit = TRUE, devinit will fail the open when requested
            file is not found.
            "autoinit" sets with [on|off] - default is off. "off" means 
            sysblk.noautoinit = TRUE.
            New message HHC00235I is displayed when a tape file is created. - Paul Gorlinsky
28 Aug 2010 Move update_maxrates_hwm() from panel.c and dyngui.c to timer.c to
            correct update of maxrates when daemon mode is enabled without a
            GUI interface being used. Previous maxrates will not be displayed if a 
            prior interval has not occurred. Current maxrates will be displayed
            during shutdown. - Paul Gorlinsky
26 Aug 2010 Add "midnight" option to maxrates. Sets interval to 1440 and 
            curr_int_start_time to the prior midnight. This will cause 
            the maxrates stats to print at midnight. 
            "impl.c" was modified to set curr_int_start_time to the 
            previous midnight if the interval is 1440 minutes. - Paul Gorlinsky
22 Aug 2010 CMPSC-Enhancement Facility with a lot of guessing - Bernard van der Helm
20 Aug 2010 Interlocked-Access Facility - Roger Bowler
16 Aug 2010 Deprecate s37x statement. Use "ldmod s37x" instead - Ivan Warren