@@ -89,6 +89,7 @@ typedef struct _CKDCU {                 /* CKD Control Unit entry    */
         U32     ciw6;                   /* CIW 6                     */
         U32     ciw7;                   /* CIW 7                     */
         U32     ciw8;                   /* CIW 8                     */
+        U8      senselength;            /* Sense length              */
       } CKDCU;
 #define CKDCU_SIZE sizeof(CKDCU)
 
